Remove players element and change styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <header><h1>Tic-Tac-Toe</h1></header>
     <main>
       <div class="container">
-        <div class="players">
-          <h2>Score Board</h2>
-          <h3>Player X: <span id="scoreX"></span></h3>
-          <h3>Player O: <span id="scoreO"></span></h3>
-        </div>
         <div class="gameboard">
-          <div class="board"></div>
+          <div class="board">
+            <div data-index="0" class="grid"></div>
+            <div data-index="1" class="grid"></div>
+            <div data-index="2" class="grid"></div>
+            <div data-index="3" class="grid"></div>
+            <div data-index="4" class="grid"></div>
+            <div data-index="5" class="grid"></div>
+            <div data-index="6" class="grid"></div>
+            <div data-index="7" class="grid"></div>
+            <div data-index="8" class="grid"></div>
+          </div>
         </div>
       </div>
     </main>
