--- a/index.html
+++ b/index.html
@@ -9,9 +9,36 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
+    <form class="player-info">
+      <h3>Enter Your Names</h3>
+      <div class="form-group">
+        <label for="player1">Player 1 (X)</label>
+        <input
+          type="text"
+          class="form-control"
+          id="player1"
+          placeholder="Name"
+        />
+      </div>
+      <div class="form-group">
+        <label for="player2">Player 2 (O)</label>
+        <input
+          type="text"
+          class="form-control"
+          id="player2"
+          placeholder="Name"
+        />
+      </div>
+      <button class="btns" type="submit">Play</button>
+    </form>
+
     <header><h1>Tic-Tac-Toe</h1></header>
     <main>
       <div class="container">
+        <div class="game-status">
+          <h4>Board:</h4>
+        </div>
+
         <div class="gameboard">
           <div class="board">
             <div data-index="0" class="grid"></div>
@@ -26,6 +53,7 @@
           </div>
         </div>
       </div>
+      <button id="reset" class="btns">Restart</button>
     </main>
     <footer>
       <p>
