--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    <form class="player-info">
+    <!-- <form class="player-info">
       <h3>Enter Your Names</h3>
       <div class="form-group">
         <label for="player1">Player 1 (X)</label>
@@ -30,16 +30,16 @@
         />
       </div>
       <button class="btns" type="submit">Play</button>
-    </form>
+    </form> -->
 
     <header><h1>Tic-Tac-Toe</h1></header>
     <main>
       <div class="container">
-        <div class="game-status">
-          <h4>Board:</h4>
-        </div>
-
         <div class="gameboard">
+          <div class="players hidden">
+            <h2>[X] <span id="playerOne"></span></h2>
+            <h2>[O] <span id="playerTwo"> </span></h2>
+          </div>
           <div class="board">
             <div data-index="0" class="grid"></div>
             <div data-index="1" class="grid"></div>
